# magnetwm

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  client.c  client.h  config.h  config.y  configure  configure.ac  desktop.c  desktop.h  event.c  event.h  ewmh.c  ewmh.h  example.magnetwmrc  functions.c  functions.h  group.c  group.h  icccm.c  icccm.h  magnetc.c  magnetwm.c  main.c  menu.c  menu.h  screen.c  screen.h  server.c  server.h  state.c  state.h  (+4 more)
autom4te.cache/: output.1  requests  traces.0  traces.1
